fix: Make the modal backdrop darker and more blurred

--- a/packages/klods-css/src/_components.scss
+++ b/packages/klods-css/src/_components.scss
@@ -823,8 +823,8 @@
     }
 
     &::backdrop {
-      background: oklch(0% 0 0 / 45%);
-      backdrop-filter: blur(2px);
+      background: oklch(0% 0 0 / 69%);
+      backdrop-filter: blur(4px);
       transition:
         background var(--klods-transition),
         overlay var(--klods-transition) allow-discrete,
